26-08-07
Solved a glitch wich would show a filter related error when no updates are available.
Added a translatable string
Removed all --nocolor code as it is deprecated (substituted by --color=n)

25-08-07
Removed included SQLite support in favor of a external SQLite library.
Inlined some code.
Fixed a bug in writting to make.conf (ticket #248)
Updated credits of About box
Added eclean and revdep-rebuild support
Added more translatable strings
Updated spanish translation


20-10-06
Only kdiff3 is supported as merge tool.
Fix for history view: parsing elog dir after emerge complete.
Merge view: Now showing all backuped files from /var/cache/kuroo/backup/configuration
History view: Added button to view elog, and showing this file.
Add "world" and "queue"-status to inspector.
New initialization routine: running emerge --info to collect arch, portage version and config protect dir list. 
View-menu is removed, "Release Information" moved to Help-menu.
KDE-settings "Show icons on buttons" is now respected.
Empty package list warning moved up, reformated package name as name (cat/subcat) in queue and history.
Customizable font for log.
Added russian translation by Bart.
Added icons in all rmb's.
Fixed Ticket #203: Crash On Click Use Flag for portage < 2.1.
Patch by Schnacki: Dependencies incorrect for portage < 2.1.

13-05-2006
Settings: Fixed resetting to default all settings.
LogsTab: text is wrapped at widget boundary.
Emerge: added Stdin.
Inspector: New DependencyView class to build tree-view with correct ordering.
Settings: Fixed make.conf settings: delete all old entries from kuroorc.
Package summary: Fixed bug in stability check: Not available packages were marked hardmasked.
Package summary: Added support for depend-atom operator '~'.
Fixed Ticket #127: Enter should open Inspector.
Fixed Ticket #123: Package inspector dialog doesn't resize properly when process is running.
Fixed Ticket #169: resizing package Inspector: fixed resize the grids.

11-04-2006