@@ -40,7 +40,7 @@
                 <cstring>tab</cstring>
             </property>
             <attribute name="title">
-                <string>ECle&amp;an</string>
+                <string>E&amp;Clean</string>
             </attribute>
             <vbox>
                 <property name="name">
@@ -113,10 +113,10 @@
                                                 <cstring>kcfg_EcleanDistfiles</cstring>
                                             </property>
                                             <property name="text">
-                                                <string>&amp;Distfiles</string>
+                                                <string>D&amp;istfiles</string>
                                             </property>
                                             <property name="accel">
-                                                <string>Alt+D</string>
+                                                <string>Alt+I</string>
                                             </property>
                                             <property name="toolTip" stdset="0">
                                                 <string>clean downloaded source files</string>
@@ -229,10 +229,10 @@
                                         </sizepolicy>
                                     </property>
                                     <property name="text">
-                                        <string>Fetch &amp;Restrict</string>
+                                        <string>&amp;Fetch Restrict</string>
                                     </property>
                                     <property name="accel">
-                                        <string>Alt+R</string>
+                                        <string>Alt+F</string>
                                     </property>
                                     <property name="toolTip" stdset="0">
                                         <string>Don't clean packages that have fetch restriction in portage.</string>
@@ -276,6 +276,9 @@
                                                     <horstretch>0</horstretch>
                                                     <verstretch>0</verstretch>
                                                 </sizepolicy>
+                                            </property>
+                                            <property name="text">
+                                                <string>1h</string>
                                             </property>
                                             <property name="toolTip" stdset="0">
                                                 <string>protect files less than this old</string>
